--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,8 @@
 {
-    "env": {
-        "es6": true,
-        "node": true
-    },
-    "extends": "airbnb",
-    "parserOptions": {
-        "ecmaVersion": 6
-    },
+    "extends": "airbnb-base",
+    "plugins": [
+        "import"
+    ],
     "rules": {
         "strict": 0,
         "no-restricted-syntax": 0,
