--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,21 @@
 {
-    "extends": "airbnb-base",
-    "plugins": [
-        "import"
-    ],
-    "rules": {
-        "strict": 0,
-        "no-restricted-syntax": 0,
-        "no-loop-func": 0,
-        "no-continue": 0,
-        "global-require": 0,
-        "import/no-dynamic-require": 0,
-        "no-console": 2,
-        "no-param-reassign": 0,
-        "class-methods-use-this": 0,
-        "guard-for-in": 0
-    }
+  "extends": "airbnb-base",
+  "plugins": [
+    "import"
+  ],
+  "rules": {
+    "strict": 0,
+    "no-restricted-syntax": 0,
+    "no-loop-func": 0,
+    "no-continue": 0,
+    "global-require": 0,
+    "import/no-dynamic-require": 0,
+    "no-console": 2,
+    "no-param-reassign": 0,
+    "class-methods-use-this": 0,
+    "guard-for-in": 0,
+    "no-underscore-dangle": 0,
+    "no-return-assign": 0,
+    "no-plusplus": 0
+  }
 }
